--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Aidas Masiliūnas"
   avatar           : "profile.png"
-  bio              : "Research Assistant Professor at NUS"
+  bio              : "Research Assistant Professor<br />National University of Singaproe<br />Experimental Economist"
   location         : 
-  employer         : "National University of Singapore"
+  employer         : #"National University of Singapore"
   pubmed           : 
   googlescholar    : 
   email            : gaiam@nus.edu.sg
