--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Aidas Masiliūnas"
   avatar           : "profile.png"
-  bio              : "Research Assistant Professor<br />National University of Singaproe<br />Experimental Economist"
+  bio              : "Research Assistant Professor<br />National University of Singapore"
   location         : 
   employer         : #"National University of Singapore"
   pubmed           : 
