--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Aidas Masiliūnas"
-  avatar           : "profile.png"
+  avatar           : "/files/profile.jpg"
   bio              : "Research Assistant Professor<br />National University of Singapore"
   location         : 
   employer         : #"National University of Singapore"
