--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Aidas Masiliūnas"
 title_separator          : "-"
 name                     : &name "Aidas Masiliūnas"
-description              : &description "Research Assistant Professor at NUS"
+description              : &description "Personal website of Aidas Masiliunas, Research Assistant Professor at NUS"
 url                      : https://masiliunas.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "masiliunas.github.io"
