--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Aidas Masiliūnas"
   avatar           : "profile.jpg"
   bio              : "Lecturer<br />The University of Sheffield<br /> Department of Economics"
-  location         : 
+  location         : "Room 512, 9 Mappin Street<br /> S1 4DT Sheffield, UK" 
   employer         : #"The University of Sheffield"
   pubmed           : 
   googlescholar    : 
